Mon Oct 22 10:20:49 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AdjacencyWrapper.java: Rename setFlag(),
	clearFlag() and hasFlag() methods into setAttributes(),
	clearAttributes() and hasAttributes().
	* src/org/jcae/mesh/amibe/ds/Triangle.java: Remove isBoundary(),
	isOuter(), isMarked() and friends methods, and add setAttributes(),
	clearAttributes() and hasAttributes() to have the same methods for
	edges and triangles.
	* src/org/jcae/mesh/amibe/ds/AdjacencyWrapper.java
	  src/org/jcae/mesh/amibe/ds/TriangleVH.java: Move getEdgeAttributes()
	and setEdgeAttributes() from AdjacencyWrapper into TriangleVH.
	* src/org/jcae/mesh/amibe/ds/Triangle.java: Remove adj member.
	* src/org/jcae/mesh/amibe/ds/HalfEdge.java
	  src/org/jcae/mesh/amibe/ds/TriangleVH.java:  HalfEdge and TriangleVH
	implement AdjacencyWrapper.
	* src/org/jcae/mesh/amibe/ds/AdjacencyWrapper.java: getAdj() and
	setAdj() can work on AdjacencyWrapper instances.

Sun Oct 21 20:41:07 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/traits/MeshTraitsBuilder.java: Always add
	TRIANGLES attribute, we can do nothing if this attribute is unset.
	* src/org/jcae/mesh/amibe/ds/AdjacencyWrapper.java
	  src/org/jcae/mesh/amibe/ds/TriangleVH.java:  Move
	{get,set}AdjLocalNumber() methods from AdjacencyWrapper into
	TriangleVH.
	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java: Let tri member be
	a TriangleVH instance instance of Triangle.
	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java: Remove getAdj()
	and setAdj() methods, and add a new hasSymmetricEdge() method.

Sat Oct 20 00:13:49 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Use MARKED
	flag instead of HalfEdge.notOriented().
	* src/org/jcae/mesh/amibe/ds/TriangleVH.java: AdjacencyVH.adj member
	can be an array of TriangleVH instances.
